<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/about_app_icon"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_below="@+id/about_title5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/appicon" />

        <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:text="@string/about_app_name"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/exo"/>

        <TextView
            android:id="@+id/about_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/exo"
            android:text="@string/about_course_project"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_title7"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/exo"
            android:text="Contact us at "
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/about_title8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_title4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="LinkedPizza.java@gmail.com"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/about_title7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_app_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/exo"
            android:text="@string/about_developed_by"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_title6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/about_title3"
            android:layout_centerHorizontal="true"
            android:text="@string/about_team_members"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/exo"/>

        <TextView
            android:id="@+id/about_title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="33dp"
            android:text="@string/about_team_member_names"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_title5"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_title2"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/exo"
            android:text="@string/about_app_description"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
