<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uottawa.linkedpizza.householdchoremanager.PersonPage">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/CurrentTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:layout_below="@+id/view"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="16dp"

            android:text="@string/current_tasks"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="24dp"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/TaskList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/CurrentTasks"
            android:layout_marginTop="11dp"
            android:divider="@null"
            android:dividerHeight="25dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="0dp"
            android:gravity="top"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.028">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/Person_Icon"
                android:maxHeight="42dp"
                android:maxWidth="42dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/PersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="13dp"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="39dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:layout_weight="10"
                android:text="@string/PersonName"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/SendMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.1"
                android:maxHeight="42dp"
                android:maxWidth="42dp"


                android:padding="2dp"
                android:text="@string/Send_message"
                android:textSize="10sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/pointsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/CurrentTasks"
            android:layout_alignStart="@+id/CurrentTasks"
            android:layout_below="@+id/linearLayout"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"
            android:text="@string/person_points" />

        <TextView
            android:id="@+id/levelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:text="@string/person_level" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
